# fastapi_genai_template

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
core/: config.py  constants.py  exceptions.py  logging.py  settings.py
infrastructures/ai/: langchain_agents.py  langchain_llms.py
infrastructures/ai/sytem_prompts/: sql_task_manager.py
infrastructures/bg_workers/: celery.py
infrastructures/cloud/: elastic_beanstalk.py
infrastructures/database/: connection.py  session.py
infrastructures/redis/: app.py
infrastructures/server/: fastapi.py  root_router.py
modules/auth/jobs/: welcome_email_job.py
modules/auth/models/: auth_model.py
modules/auth/repositories/: login_repository.py
modules/auth/routes/: auth_index.py  login_route.py
modules/auth/schemas/: login_schema.py
modules/auth/services/: login_service.py
modules/auth/utils/: login_utils.py
utils/: date_utils.py
